[package]
name = "tosm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kdtree = {version = "0.5.1", features = ["serialize"]}
typenum = "1.15.0"
serde = {version = "1.0.136", features = ["derive"]}

serde_json = "1.0.59"
serde_cbor = "0.10"
bincode = "1.3.3"
flate2 = "1.0"
brotli = "3.3.3"